static/style.css
:root {
    --var-light-pink: #E2E4F6;
    --var-submit-buttons: #86626E;
    --var-background: #DBAFC1;
    --var-br: 10px
}

h4{
    font-size: 1.2em;
}
.timebox{
    display: flex;
    gap: 5px;
    align-items: center;
    justify-content: center;
    margin-top: 15px;
    margin-top: 0;
}
.timebox > div{
    display: flex;
    align-items: center;
    justify-content: center;
}
.timebox p, .timebox h4  {
    margin: 0;
}
.timebox h4{
    width: 2em;
    text-align: right;
}
.deadline{
    justify-self: end;
    margin-right: 1em;
    margin-left: auto;
}
body {
    color: #0E1116;
    background-repeat: no-repeat;
    background-size: cover;
    overflow-x: hidden;
    font-family: "Rubik";
}

nav {
    background-color: white;
    box-shadow: 50px 50px rgba(#86626E, 100%);
    padding-left: 10px;
    padding-right: 10px;
    box-sizing: border-box;
}

nav ul {
    display: flex;
    align-items: center;
    width: 100%;
    padding-right: 1em;
    box-sizing: border-box;
}

nav ul li.user_name {
    margin-left: auto;
    justify-self: end;
}

.container {
    margin: auto;
    width: 50%;
}

h1 {
    font-size: 2em;
    text-align: center;
}

.log {
    width: 50%;
    height: 600px;
    background-color: #DBAFC1;
}

.who {
    width: 50%;
    height: 600px;
    background-color: #E2E4F6;
}

.btn {
    font-weight: 500;
    size: 1.1em;
    width: max(30%, 9em);
    min-width: 9em;
    padding: 10px;
    background-color: #86626E;
    border: none;
    border-radius: 25px;
    cursor: pointer;
    margin: 20px !important;
    font-size: 1em;
    padding: 10px;
    color: white;
    box-shadow: 1px 1px 1px rgb(41, 41, 41);
    border: #ffffff;
    transition: 0.2s;
}
.btn:hover{
    transform: scale(1.1);
    color: #0E1116 !important;
    background-color: white ;
}

.btn:hover>*{
    color: #0E1116 !important
}
.adder{
    border: 0px;
}
.messages{
    transition: ease-in-out 2s;
}
.submitbtn {
    width: max(30%, 9em);
    min-width: 9em;
    padding: 10px;
    background-color: #DBAFC1;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    font-size: 1em;
    padding: 10px;
    box-shadow: 1px 1px 1px rgb(41, 41, 41);
    border: #ffffff;
    transition: 0.2s;
}
.submitbtn:hover{
    color: #ffffff !important;
    background-color: #86626E ;
    transform: scale(1.1);
}

.submitbtn:hover>*{
    color: #ffffff !important
}

ul{
    list-style-type: none;

}
#udvozlet {
    margin: auto;
    margin-right: 0px;
    text-align: right;
}

section {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 100px min(5em, 10%);
}
.up {

    background-color: #E2E4F6;
}

.middle {
    background-color: #DBAFC1;
}

.lower {
    background-color: #86626E;
}

.footer {
    background-color: #0E1116;
    overflow-y: hidden;
}


.wave {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.wave svg {
    position: relative;
    display: block;
    width: calc(134% + 1.3px);
    height: 114px;
}

.wave .shape-fill {
    fill: #f8f9fa;
}

.wave2 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);

}

.wave2 .shape-fill {
    fill: #E2E4F6;
}

.wave3 svg{
    position: relative;
    display: block;
    width: calc(206% + 1.3px);

}

.wave3 .shape-fill {
    fill: #DBAFC1;
}

.wave4 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.wave4 svg {
    position: relative;
    display: block;
    width: calc(300% + 1.3px);
}

.wave4 .shape-fill {
    fill: #86626E;
}

.middle{
    position: relative;
    z-index: -1;
}
.lower{
    position: relative;
    z-index: -1;
}

form{
    position: relative;
    z-index: 10;
}


section.footer p{
    color: rgb(153, 153, 153);
}

